<resources>
    <string name="app_name">Giving Tree</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="edit_message">Edit message</string>
    <string name="button_send">Send</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_contacts">Contacts</string>
    <string name="title_activity_friends">Friends</string>
    <string name="title_activity_myfriends">My Friends</string>
    <string name="title_activity_add_friends">Add Friends</string>
    <string name="title_activity_form">Lending</string>

    <string name="what_date">Until what date?</string>

    <string name="item_name">What are you lending?</string>
    <string name="rec_name">To who?</string>
    <string name="what_time">And what time?</string>
    <string name="priority">High Priority</string>
    <string name="title_activity_confirm">Confirmation</string>

    <string name="item">Item name:</string>
    <string name="receiver">To:</string>
<<<<<<< HEAD

    <string name="title_activity_history">Transaction History</string>

    <string name="username">Jane Doe</string>

=======
    <string name="title_activity_history">history</string>
    <string name="username">Jane Doe</string>
>>>>>>> origin/master

    <string name="date1">11/20/2016</string>
    <string name="item1">15$</string>
    <string name="item2">Harry Potter 7</string>
    <string name="item3">Black pencil</string>
    <string name="karma">5</string>
    <string name="useremail">jane.doe@gmail.com</string>
    <string name="status">invisible</string>
</resources>
