<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_confirm"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="tree.giving.givingtree.confirm"
    tools:showIn="@layout/app_bar_confirm">

    <TextView

        android:text="@string/item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView2" />

    <TextView

        android:layout_marginTop="15dp"
        android:layout_marginLeft="0dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/itemName"
        android:text="@string/item_name" />


    <TextView
        android:layout_marginTop="55dp"
        android:text="@string/receiver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView3" />

    <TextView
        android:layout_marginTop="70dp"
        android:layout_marginLeft="0dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/recipient"
        android:text="@string/rec_name" />

    <TextView
        android:layout_marginTop="110dp"
        android:layout_marginLeft="0dp"
        android:text="Timeframe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView4" />

    <TextView
        android:layout_marginTop="125dp"
        android:layout_marginLeft="0dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:ems="10"
        android:id="@+id/dateDeadline"
        android:text="@string/what_date" />

    <TextView
        android:layout_marginTop="155dp"
        android:layout_marginLeft="0dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/timeDeadline"
        android:text="@string/what_time" />

    <TextView
        android:layout_marginTop="195dp"
        android:layout_marginLeft="0dp"
        android:text="Priority Level"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView" />


    <Button
        android:layout_marginTop="250dp"
        android:layout_marginLeft="0dp"
        android:text="Confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:onClick="toMain"
        style="@style/Widget.AppCompat.Button"
         />

</RelativeLayout>
