<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="tree.giving.givingtree.form"
    tools:showIn="@layout/app_bar_form">

    <TextView

        android:text="Item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView2" />

    <EditText
        android:layout_marginTop="15dp"
        android:layout_marginLeft="0dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/itemName"
        android:hint="@string/item_name" />


    <TextView
        android:layout_marginTop="55dp"

        android:text="Recipient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView3" />

    <EditText
        android:layout_marginTop="70dp"
        android:layout_marginLeft="0dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/recipient"
        android:inputType="text"
        android:hint="@string/rec_name" />

    <TextView
        android:layout_marginTop="110dp"
        android:layout_marginLeft="0dp"
        android:text="Timeframe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView4" />

    <EditText
        android:layout_marginTop="125dp"
        android:layout_marginLeft="0dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/dateDeadline"
        android:hint="@string/what_date" />

    <EditText
        android:layout_marginTop="155dp"
        android:layout_marginLeft="0dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:ems="10"
        android:id="@+id/timeDeadline"
        android:hint="@string/what_time" />

    <TextView
        android:layout_marginTop="195dp"
        android:layout_marginLeft="0dp"
        android:text="Priority Level"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView" />

    <CheckBox
        android:layout_marginTop="215dp"
        android:layout_marginLeft="0dp"
        android:text="@string/priority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/checkBox" />

    <Button
        android:layout_marginTop="250dp"
        android:layout_marginLeft="0dp"
        android:text="Done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        style="@style/Widget.AppCompat.Button"
        android:onClick="input_values" />

</RelativeLayout>
